voicelist design - get api integration | context api changes | stuck -> issue on chatbot data to voicebot data

--- a/src/app/(secure)/chatbot/chatbot.scss
+++ b/src/app/(secure)/chatbot/chatbot.scss
@@ -74,6 +74,9 @@
       border: none;
     }
   }
+  .activate-title{
+    border-bottom: #2E58EA 3px solid;
+  }
 
   /*------------------------------------------chatbot-grid----------------------------------------------*/
   .chatbot-grid {
@@ -302,6 +305,62 @@
       font-style: normal;
       font-weight: 500;
       line-height: 28px; /* 140% */
+    }
+  }
+
+  .voicebot-list-container{
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+    .voicebot-list-card{
+      display: flex;
+      width: 286px;
+      padding: 12px;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 20px;
+      border-radius: 16px;
+      border: 1px solid  #FCFCFD;
+      background: #FCFCFD;
+      &:hover{
+        // border: 2px solid  #4D72F5;
+        background: #ECF0FE;
+      }
+      .assistant-image{
+        text-align: center;
+      }
+      .assistant-title{
+        color: #141416;
+        text-align: center;
+
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 28px; /* 140% */
+      }
+      .info-content{
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        .info{
+          display: flex;
+          justify-content: space-between;
+          .info-label{
+            color:  #B1B5C3;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; /* 171.429% */
+          }
+          .value{
+            color: #777E90;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; /* 171.429% */
+          }
+        }
+      }
     }
   }
 
