--- a/src/app/(secure)/voicebot/dashboard/dashboard.scss
+++ b/src/app/(secure)/voicebot/dashboard/dashboard.scss
@@ -15,6 +15,7 @@
         .image {
           position: absolute;
           left: -30px;
+          cursor: pointer;
 
           width: 24px;
           height: 24px;
